# felipe

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
src/: main.rs
